# eventflowsentry

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt  run_docker_benchmark.py
.github/workflows/: test.yml
docker/: docker-compose.yml  runner.Dockerfile
