[project]
name = "eventflowsentry"
version = "0.1.0"
description = "Reproducible Fault Injection and Metamorphic Testing for Event-Time Streaming Pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{ name = "Goutam Adwant", email = "workwithgoutam@gmail.com" }]
keywords = [
    "streaming", "fault-injection", "kafka", "flink", "testing",
    "metamorphic-testing", "event-time", "reproducibility"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "kafka-python>=2.2.0,<3"
]

[project.scripts]
eventflowsentry = "eventflowsentry.cli:main"

[project.urls]
Homepage = "https://github.com/goutamadwant/eventflowsentry"
Repository = "https://github.com/goutamadwant/eventflowsentry"
Issues = "https://github.com/goutamadwant/eventflowsentry/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
